src/test/resources/example/cocos/valid/validParameterType.ocl
ocl invalidParameterType {
  context boolean Person.changeCompany(int gehalt)
  let 
   min = a.startTime.lessThan(a.closingTime)
              ? a.startTime : a.closingTime; 
  pre Test : true;
  post Test : false;
  
}