src/test/resources/example/cocos/invalid/invalidVariableName.ocl
ocl invalidVariableName {
  context boolean Person.changeCompany(String name)
  let 
   min = a.startTime.lessThan(a.closingTime)
              ? a.startTime : a.closingTime; 
  pre Test : true;
  post Test : false;
  
}